fix footer alignment

--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,4 +1,6 @@
 footer {
+    width: 100%;
+
     a {
         color: $text-color-link;
         text-decoration: none;
